parser/src/parser/snapshots/tests__parser::enums::tests::parse_exported_enum.snap
---
created: "2020-05-06T10:43:11.211805Z"
creator: insta@0.8.2
source: parser/src/parser/enums.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 18)
  ENUM_DEF@[0; 18)
    VISIBILITY@[0; 6)
      EXPORT_KW@[0; 6) "export"
    WHITESPACE@[6; 7) " "
    ENUM_KW@[7; 11) "enum"
    WHITESPACE@[11; 12) " "
    NAME@[12; 15)
      IDENT@[12; 15) "Foo"
    WHITESPACE@[15; 16) " "
    ENUM_VARIANT_LIST@[16; 18)
      L_CURLY@[16; 17) "{"
      R_CURLY@[17; 18) "}"

